# library_system

./: CMakeLists.txt
client/: main.cpp
db/: DataProvider.cpp  DataProvider.h
db/models/: Book.cpp  Book.h  Model.h
server/: main.cpp
